# alphasignal-web

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.mjs  install.sh  main.py  monitor.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish-articles.yml  publish-substack.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/api/revalidate/: route.ts
app/archive/: page.tsx
app/notice/: page.tsx
app/notice/[slug]/: page.tsx
app/signal/[lang]/[type]/[date]/: page.tsx
app/sponsorship/: page.tsx
app/support/: page.tsx
content/notice/: welcome.mdx
docs/: search-registration.md
docs/superpowers/specs/: 2026-07-14-web-design-refactoring-design.md
naver-premium/: publish.py
scripts/: patch-next-ts.js
src/: publish.py
src/components/: Adsense.tsx  Analytics.tsx  ContentCard.tsx  ContentList.tsx  Disclaimer.tsx  FilterBar.tsx  Footer.tsx  Header.tsx  LocalDate.tsx  PremiumDashboard.tsx  ShareButton.tsx  Sponsorship.tsx  Support.tsx  ThemeToggle.tsx  TickerTapeWidget.tsx  TimeTicker.tsx
src/services/: github.ts
src/utils/: extract-excerpt.ts  format-date.ts  get-latest-notice.ts  reading-time.ts  us-market-holidays.ts
substack/: publish.py
tests/: github.test.ts  revalidate.test.ts  signal.test.tsx
