[project]
name = "publisher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "playwright>=1.61.0",
    "playwright-stealth>=2.0.3",
    "pyright>=1.1.411",
    "ruff>=0.15.21",
    "watchdog>=6.0.0",
]
